--- a/pms_base/views/pms_amenity.xml
+++ b/pms_base/views/pms_amenity.xml
@@ -49,7 +49,7 @@
         <field name="name">pms.amenity.tree</field>
         <field name="model">pms.amenity</field>
         <field name="arch" type="xml">
-            <tree string="Amenities">
+            <tree name="Amenities">
                 <field name="default_code" />
                 <field name="name" />
                 <field name="type_id" select="1" />
