--- a/pms_helpdesk_mgmt/views/helpdesk_ticket_templates.xml
+++ b/pms_helpdesk_mgmt/views/helpdesk_ticket_templates.xml
@@ -8,6 +8,7 @@
             />
         </xpath>
     </template>
+    
     <template
         id="portal_my_tickets"
         inherit_id="helpdesk_mgmt.portal_ticket_list"
@@ -19,11 +20,16 @@
         </xpath>
         <xpath expr="//tr/td[position()=3]" position="after">
             <td>
-                <span t-field="ticket.pms_property_id.name" />
+                <span t-field="ticket.sudo().pms_property_id.name" />
             </td>
             <td>
-                <span t-field="ticket.room_id.name" />
+                <span t-field="ticket.sudo().room_id.name" />
             </td>
+        </xpath>
+            <xpath expr="//a[contains(@t-attf-href, '/my/ticket')]" position="replace">
+            <a t-attf-href="/my/ticket/#{ticket.id}?{{ keep_query() }}">
+                <span t-field="ticket.name" />
+            </a>
         </xpath>
     </template>
     <template
@@ -33,13 +39,13 @@
     >
         <xpath expr="//span[@t-field='ticket.create_date']" position="after">
             <div><strong>Property:</strong>
-            <span t-field="ticket.sudo().pms_property_id.name" /></div>
+            <span t-field="ticket.pms_property_id.name" /></div>
             <div><strong>Room:</strong>
-            <span t-field="ticket.sudo().room_id.name" /></div>
+            <span t-field="ticket.room_id.name" /></div>
         </xpath>
         <xpath expr="//span[@t-field='ticket.category_id']" position="after">
             <div><strong>Tag:</strong>
-            <span t-field="ticket.sudo().tag_ids" /></div>
+            <span t-field="ticket.tag_ids" /></div>
         </xpath>
     </template>
 
@@ -53,23 +59,24 @@
             position="after"
         >
             <div class="col-md-7 col-sm-8">
-                <label for="pms_property_id">Company:</label>
-                <select
-                    class="form-control"
-                    id="company_id"
-                    name="company_id"
-                    required="required"
-                >
-                    <option value="" disabled="disabled">Select a company</option>
-                    <t t-foreach="companies" t-as="company">
-                        <option t-att-value="company.id">
-                            <t t-esc="company.name" />
-                        </option>
-                    </t>
-                </select>
+                <label for="company_id">Company:</label>
+            <select
+                class="form-control"
+                id="company_id"
+                name="company_id"
+                required="required"
+                t-attf-domain="[('id', 'in', companies_active)]"
+            >
+                <option value="" disabled="disabled">Select a company</option>
+                <t t-foreach="companies" t-as="company">
+                    <option t-att-value="company.id">
+                        <t t-esc="company.name" />
+                    </option>
+                </t>
+            </select>
             </div>
             <div class="col-md-7 col-sm-8">
-                <label for="pms_property_id">Property:</label>
+                <label for="pms_property_id">Property</label>
                 <select
                     class="form-control"
                     id="pms_property_id"
@@ -85,7 +92,7 @@
                         </option>
                     </t>
                 </select>
-                <label for="room_id">Select Room:</label>
+                <label for="room_id">Select Room</label>
                 <select
                     class="form-control"
                     id="room_id"
@@ -108,7 +115,7 @@
                         name="tag_ids"
                         required="required"
                     >
-                        <option value="">Selecciona una opción</option>
+                        <option value="">Select a option</option>
                         <t t-foreach="tags" t-as="tag">
                             <option t-attf-value="#{tag.id}">
                                 <t t-esc="tag.name" />
