--- a/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -85,6 +85,9 @@
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk_mgmt.ticket_view_form" />
         <field name="arch" type="xml">
+            <!-- <xpath expr="//field[@name='company_id']" position="attributes">
+                <attribute name="domain">[('active', '=', True)]</attribute>
+            </xpath> -->
             <xpath expr="//field[@name='company_id']" position="after">
                 <field name="pms_property_id" options="{'no_create': True}" />
                 <field
