WIP - account.analytic.distribution + model - disabled analytic tags - disabled move_id in analytic line - payment.acquirer → payment.provider - renames xml id inherit views - delete groups='base.group_multi_company'

--- a/pms/views/account_payment_views.xml
+++ b/pms/views/account_payment_views.xml
@@ -22,7 +22,7 @@
         </field>
     </record>
 
-    <record id="view_account_payment_tree" model="ir.ui.view">
+    <!-- <record id="view_account_payment_tree" model="ir.ui.view">
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_tree" />
         <field name="arch" type="xml">
@@ -33,9 +33,9 @@
                 <field name="origin_reference" optional="hidden" />
             </xpath>
         </field>
-    </record>
+    </record> -->
 
-    <record id="view_account_payment_search" model="ir.ui.view">
+    <!-- <record id="view_account_payment_search" model="ir.ui.view">
         <field name="model">account.payment</field>
         <field name="inherit_id" ref="account.view_account_payment_search" />
         <field name="arch" type="xml">
@@ -57,6 +57,6 @@
                 />
             </xpath>
         </field>
-    </record>
+    </record> -->
 
 </odoo>
