--- a/pms/views/payment_acquirer_views.xml
+++ b/pms/views/payment_acquirer_views.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-  <record id="payment_acquirer_form" model="ir.ui.view">
-    <field name="name">muliproperty.payment.acquirer.form</field>
-    <field name="model">payment.acquirer</field>
-    <field name="inherit_id" ref="payment.acquirer_form" />
+  <record id="payment_provider_form" model="ir.ui.view">
+    <field name="name">muliproperty.payment.provider.form</field>
+    <field name="model">payment.provider</field>
+    <field name="inherit_id" ref="payment.payment_provider_form" />
     <field name="arch" type="xml">
       <field name="company_id" position="after">
           <field name="pms_property_ids" widget="many2many_tags" />
