--- a/pms/views/payment_transaction_views.xml
+++ b/pms/views/payment_transaction_views.xml
@@ -2,9 +2,9 @@
 <odoo>
     <record id="payment_transaction_inherit_view_form" model="ir.ui.view">
         <field name="model">payment.transaction</field>
-        <field name="inherit_id" ref="payment.transaction_form" />
+        <field name="inherit_id" ref="payment.payment_transaction_form" />
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='date']" position="before">
+            <xpath expr="//field[@name='create_date']" position="before">
                 <field name="folio_ids" />
             </xpath>
         </field>
