--- a/pms/views/res_partner_views.xml
+++ b/pms/views/res_partner_views.xml
@@ -34,7 +34,7 @@
         <field name="name">res.partner.view.form</field>
         <field name="model">res.partner</field>
         <field name="inherit_id" ref="base.view_partner_form" />
-        <field name="groups_id" eval="[(4, ref('pms.group_pms_user'))]" />
+        <!--<field name="groups_id" eval="[(4, ref('pms.group_pms_user'))]" />-->
         <field name="arch" type="xml">
             <xpath expr='//div[@name="button_box"]' position='inside'>
                 <button
