--- a/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
+++ b/pms_helpdesk_mgmt/views/helpdesk_ticket_views.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <record id="action_helpdesk_ticket_kanban_custom" model="ir.actions.act_window">
+            <field name="name">Helpdesk Ticket Custom</field>
+            <field name="res_model">helpdesk.ticket</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="context">{'default_team_id': active_id}</field>
+            <field
+            name="domain"
+        >[('team_id', '=', active_id), ('pms_property_id', 'in', allowed_pms_property_ids),('active', '=', True)]</field>
+    </record>
+
     <record id="helpdesk_ticket_view_search" model="ir.ui.view">
         <field name="name">helpdesk.ticket.view.search</field>
         <field name="model">helpdesk.ticket</field>
@@ -48,10 +58,20 @@
                 expr="//div[@class='o_kanban_record_headings']/field[@name='number']"
                 position="after"
             >
+                <field name="allowed_company_ids" invisible="1" />
+                <field
+                    name='company_id'
+                    domain="[('id', 'in', allowed_company_ids)]"
+                    invisible="1"
+                />
                 <div class="font-weight-bold text-info">
                     <br />
+                    <field name="allowed_pms_property_ids" invisible="1" />
                     <span class="text-dark">
-                        <field name="pms_property_id" />
+                        <field
+                            name="pms_property_id"
+                            domain="[('id', 'in', allowed_pms_property_ids)]"
+                        />
                     </span>
                 </div>
                 <div class="text-warning">
@@ -74,9 +94,14 @@
         <field name="arch" type="xml">
             <xpath expr="//field[@name='name']" position="after">
                 <field name="category_id" />
-                <field name="pms_property_id" />
+                <field
+                    name="pms_property_id"
+                    options="{'no_create': True}"
+                    domain="[('id', 'in', allowed_pms_property_ids)]"
+                />
                 <field name="room_id" />
                 <field name="tag_ids" widget="many2many_tags" />
+                <field name="allowed_pms_property_ids" invisible="1" />
             </xpath>
         </field>
     </record>
@@ -85,6 +110,11 @@
         <field name="model">helpdesk.ticket</field>
         <field name="inherit_id" ref="helpdesk_mgmt.ticket_view_form" />
         <field name="arch" type="xml">
+            <xpath expr="//field[@name='company_id']" position="attributes">
+                <attribute name="domain" />
+                <attribute name="options">{'no_create': True}</attribute>
+                <attribute name="domain">[('id', 'in', allowed_company_ids)]</attribute>
+            </xpath>
             <xpath expr="//field[@name='company_id']" position="after">
                 <field name="pms_property_id" options="{'no_create': True}" />
                 <field
